# SUMM-Daemon

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/summ-cli/: Cargo.toml
crates/summ-cli/src/: client.rs  main.rs
crates/summ-cli/src/commands/: mod.rs
crates/summ-common/: Cargo.toml
crates/summ-common/src/: error.rs  lib.rs  protocol.rs  types.rs
crates/summ-common/tests/: integration_tests.rs
crates/summ-daemon/: Cargo.toml
crates/summ-daemon/src/: handler.rs  hooks.rs  init.rs  ipc.rs  main.rs  recovery.rs  server.rs  session.rs  tmux.rs
docs/: COMMANDS.md  INSTALLATION.md  USAGE.md
docs/desgin/: SUMM-Daemon-PRD-v1.0.md
docs/plans/: 2026-02-02-summ-daemon-implementation.md  summ-daemon-design-v2.md
scripts/: install.sh  uninstall.sh
systemd/: summ-daemon.service
