[package]
name = "summ-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "summ-daemon"
path = "src/main.rs"

[dependencies]
summ-common = { path = "../summ-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
compress-tools = "0.14"
sd-notify = "0.4"
dirs = { workspace = true }
